# Filecraft

./: .coveragerc  .gitattributes  .gitignore  .golangci.yml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  OPEN_SOURCE_CHECKLIST.md  README.md  ROADMAP.md  SECURITY.md  pyrightconfig.json
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  RELEASES.md
file-organiser-go/: README.md  go.mod  main.go
file-organiser-go/cmd/: helpers.go  helpers_test.go  merge.go  rename.go  revert.go  root.go  separate.go  separate_test.go
file-organiser-go/internal/organizer/: constants.go  history.go  mode.go  operations.go  organizer.go  organizer_test.go
file-organiser-python/: README.md  pyproject.toml
file-organiser-python/src/file_organiser_python/: constants.py  enums.py  history.py  main.py  operations.py  organizer.py  utils.py
file-organiser-python/tests/: test_organizer.py
filecraft-go/: README.md  go.mod  main.go
filecraft-go/cmd/: merge.go  rename.go  revert.go  root.go  separate.go  separate_test.go  spinner.go
filecraft-go/internal/organizer/: edge_cases_test.go  history.go  operations.go  organizer.go  organizer_test.go  utils.go
filecraft-python/: README.md  pyproject.toml
filecraft-python/src/file_organiser_python/: history.py  main.py  operations.py  organizer.py  spinner.py  utils.py
filecraft-python/tests/: test_edge_cases.py  test_organizer.py
