[project]
name = "filecraft-cli"
version = "1.0.1"
description = "A CLI organizer you didn’t know you needed — yet."
authors = [{ name = "MURTAZA PATEL", email = "murtazapatel89100@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "cli",
    "file-organizer",
    "filesystem",
    "automation",
    "developer-tools",
]
dependencies = ["typer (>=0.24.1,<0.25.0)"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Topic :: System :: Filesystems",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/murtazapatel89100/Filecraft"
Repository = "https://github.com/murtazapatel89100/Filecraft"
Issues = "https://github.com/murtazapatel89100/Filecraft/issues"

[project.scripts]
filecraft = "file_organiser_python.main:app"


[tool.poetry]
packages = [{ include = "file_organiser_python", from = "src" }]

[tool.poetry.scripts]
filecraft = "file_organiser_python.main:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = ["black (>=26.1.0,<27.0.0)", "pyinstaller (==6.19.0)"]
